--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase-admin": "10.3",
+    "got": "^9.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jquery": "^3.6.1",
     "next": "12.3.0",
